<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="18dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/server_port"
            android:gravity="center"/>
        <Button
            android:id="@+id/start_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_server"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/stop_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_server"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/client_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/client_address"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"/>
        <EditText
            android:id="@+id/client_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/client_port"
            android:gravity="center"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_querry"
        android:gravity="center"
        />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        />

    <TextView
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/response"
        android:layout_gravity="center"
        android:gravity="center"/>
</LinearLayout>